# cosmetics_universe

./: .dockerignore  .gitignore  Dockerfile  README.md
ai_integration/: urls.py  views.py
ai_integration/services/: compare_products_ai_service.py
app/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
compose/: docker-compose.yaml
products_import/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
products_import/services/: products_import_service.py  products_serializer.py  temp.py
products_import/services/parsers/: base_parser.py  parser_getter.py  podrygka_parser.py  proficosmetics_parser.py  randewoo_parser.py  ulybka_radugi_parser.py
products_search/: forms.py  urls.py  views.py
products_search/services/: filter_service.py  search_service.py
products_search/static/css/: main.css  products_catalog.css
templates/admin/: index.html  products_import.html
templates/main/: products_catalog.html
templates/partial_views/: base_scripts.html  pagination.html
