[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vladislav Bochkov <55vlad.boch55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
mysql-connector-python = "^8.3.0"
mysqlclient = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
