[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vladislav Bochkov <55vlad.boch55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
mysql-connector-python = "^8.3.0"
mysqlclient = "2.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pillow = "^10.2.0"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"
psycopg2 = "^2.9.9"
openai = "^1.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
